Update the SCIM SDK to Java 17
This commit updates the SDK to leverage new JDK enhancements (such as
pattern variables) that simplify existing implementations. This also
includes documentation cleanup, resolution of new Javadoc warnings,
and fixes for new deprecation warnings.

Reviewer: vyhhuang
Reviewer: dougbulkley

JiraIssue: DS-49655